# deepmine

./: .dockerignore  .gitignore  .npmignore  README.md  deploy-dashboard.sh  package-lock.json  package.json
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/admin/rescore/: route.ts
dashboard/app/api/auth/register/: route.ts
dashboard/app/api/auth/verify/: route.ts
dashboard/app/api/discoveries/: route.ts
dashboard/app/api/export/: route.ts
dashboard/app/api/leaderboard/: route.ts
dashboard/app/api/samples/processed/: route.ts
dashboard/app/api/seed/: route.ts
dashboard/app/api/sse/: route.ts
dashboard/app/api/stats/: route.ts
dashboard/app/api/submit/: route.ts
dashboard/app/api/timeline/: route.ts
dashboard/app/api/user/[username]/: route.ts
dashboard/app/api/user/[username]/progress/: route.ts
dashboard/app/api/user/[username]/settings/: route.ts
dashboard/app/discoveries/: page.tsx
dashboard/app/user/[username]/: page.tsx
dashboard/components/dashboard/: ActivityHistogram.tsx  BGCTypeChart.tsx  DiscoveryTimeline.tsx  HeroStats.tsx  Leaderboard.tsx  LiveFeed.tsx  MiningSettings.tsx  MiningSettingsInline.tsx  NoveltyGauge.tsx  PipelineProgress.tsx  SamplesScanned.tsx
dashboard/components/layout/: Footer.tsx  Header.tsx
dashboard/components/ui/: AnimatedCounter.tsx  GlassCard.tsx  LiveIndicator.tsx  PillTabs.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/hooks/: useSSE.ts
dashboard/lib/: db.ts  github-push.ts  novelty-scorer.ts  progress.ts  rate-limit.ts  sse.ts  types.ts  utils.ts
docker/: Dockerfile.full  Dockerfile.lite  Dockerfile.standard  auto.py  auto_config.yaml
pipeline/: .gitignore  LICENSE  README.md  Snakefile  pyproject.toml
pipeline/config/: config.yaml
pipeline/deepmine/: __init__.py  cli.py  telemetry.py
pipeline/deepmine/features/: bgc_features.py
pipeline/deepmine/models/: __init__.py  activity_scorer.py  bgc_encoder.py  training_data.py
pipeline/deepmine/parsers/: __init__.py  antismash.py  deepbgc.py  ensemble.py  gecco.py
pipeline/deepmine/utils/: io.py
pipeline/tests/: test_model.py  test_parsers.py
pipeline/workflow/rules/: assembly.smk  bgc_detection.smk  novelty.smk  scoring.smk
pipeline/workflow/scripts/: ensemble_bgc.py  extract_features.py  predict_activity.py
scripts/: cleanup-seed-data.ts
